--- a/fdm_app/templates/history.html
+++ b/fdm_app/templates/history.html
@@ -67,11 +67,14 @@
                             <td>{{ mission.location }}</td>
                             <!--nom des techniciens et prenom-->
                             <td>
-                            {% for technicien in mission.techniciens.all %}
-                                {{ technicien.first_name }} {{ technicien.last_name }}<br>
-                            {% empty %}
+                              {% for technicien in mission.techniciens.all %}
+                                <span class="technicien-name" data-bs-toggle="tooltip" data-bs-placement="top" 
+                                      title="{{ technicien.first_name }} {{ technicien.last_name }}">
+                                  {{ technicien.first_name }} {{ technicien.last_name }}
+                                </span><br>
+                              {% empty %}
                                 Aucun technicien
-                            {% endfor %}
+                              {% endfor %}
                             </td>
                             <!--date de la mission-->
                             <td>
@@ -158,5 +161,19 @@
     {% for mission in missions %}
         {% include 'detail_modal.html' with mission=mission %}
     {% endfor %}
+
 </div>
+
+<!-- JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    // Initialisation des tooltips Bootstrap
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl);
+    });
+  });
+</script>
+
 {% endblock %}
